# hw_01_nginx_log_parser

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml
src/app/: analyzer.py  cli.py  config.py  logger.py  logs.py  main.py  report.py  report_renderer.py
src/app/conf_parser/: parser.py
src/tests/: test_analyzer.py  test_cli.py  test_config_parser.py  test_logs.py  test_main_logging.py  test_main_runtime.py  test_report.py
